# catia-weld-spot

./: .gitignore  AGENTS.md  CLAUDE.md  CLI.md  DEVLOG.md  PLAN.md  README.md  RESULT.md  environment-catia.yml  environment.yml  pyproject.toml  requirements-catia.txt  requirements.txt
catia/: export_step.py  extract_faces.py  write_candidates.py
data/: SPOT.ground_truth.json  candidates_component_full.json  component_e2e.candidates.json  component_e2e.evaluation.json  faces_MDAU54VBV4.enriched.json  faces_MDAU54VBV4.json
docs/: ALGORITHM.md  ALG_update.json  ALG_updatev2.json  PLAN.md  TODO.json  dataset_generalization.md  generic_plane_selection_migration_inventory.md  json_contract.md
scripts/: adjudicate_component_planar_truth.py  analyze_general_plane_selection_errors.py  build_candidate_chain_atlas.py  build_component_weld_ansa_scene.py  build_general_plane_selection_optimization_backlog.py  build_operating_frontier.py  build_plane_selection_template.py  check_ansa_weld_visualization.py  check_component_planar_weld_acceptance.py  check_env_catia.py  check_env_core.py  check_exact_layout_pool.py  check_plane_selection_baseline.py  conclude_general_plane_selection_controlled_same_part.py  diagnose_general_plane_selection_aabb.py  diagnose_general_plane_selection_gap_recovery.py  diagnose_general_plane_selection_same_part_topology.py  enrich_faces_with_step.py  evaluate_component_weld_points.py  evaluate_general_plane_selection.py  evaluate_general_plane_selection_same_part.py  evaluate_template_plane_selection.py  extract_ground_truth.py  inspect_run.py  (+11 more)
(+94 files in other folders)
