[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "weld-core"
version = "0.1.0"
description = "Weld point candidate detection core (CATIA-independent algorithm layer)"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
